--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Login/login.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Login/login.html.twig
@@ -1,5 +1,8 @@
 {% extends 'FHBingenMHBBundle::layout.html.twig' %}
 
+{% block userLogout %}
+{% endblock %}
+
 {% block content %}
     {% if error %}
         <div>{{ error.message }}</div>
