--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
@@ -103,20 +103,22 @@
 
 <div id="header" class="navbar navbar-default navbar-fixed-top navbar-brand" style="min-height:75px">
     <div class="navbar-header">
-            <img src="{{ asset('bundles/fhbingenmhb/images/logo.png') }}" alt="logo" />
-            <span>Modulhandbuchverwaltung</span>
+        <img src="{{ asset('bundles/fhbingenmhb/images/logo.png') }}" alt="logo"/>
+        <span>Modulhandbuch-Verwaltungssystem</span>
     </div>
-    <nav class="collapse navbar-collapse">
-        <ul class="nav navbar-nav pull-right">
-            <li class="dropdown">
-                <a href="#" id="nbAcctDD" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user"></i>Username<i
-                            class="icon-sort-down"></i></a>
-                <ul class="dropdown-menu pull-right">
-                    <li><a href="#">Log Out</a></li>
-                </ul>
-            </li>
-        </ul>
-    </nav>
+    {% block userLogout %}
+        <nav class="collapse navbar-collapse">
+            <ul class="nav navbar-nav pull-right">
+                <li class="dropdown">
+                    <a href="#" id="nbAcctDD" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user"></i>Username<i
+                                class="icon-sort-down"></i></a>
+                    <ul class="dropdown-menu pull-right">
+                        <li><a href="{{ path('fhbingen_mhb_login_logout') }}">Log Out</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    {% endblock %}
 </div>
 <div id="wrapper">
     <div id="sidebar-wrapper" class="col-md-2">
@@ -124,7 +126,7 @@
             <ul class="nav list-group nav-pills nav-stacked">
                 {% block navbar %}
                     <li role="presentation" class="active">
-                        <a href="" >Hilfen</a>
+                        <a href="">Hilfen</a>
                     </li>
                     <li role="presentation">
                         <a href="">Benutzerdoku</a>
