--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MHB-Test</title>
+    <title>MHB-VS</title>
 
     <!-- Bootstrap -->
     <link href="{{ asset('bundles/fhbingenmhb/css/bootstrap.css') }}" rel="stylesheet">
@@ -96,7 +96,6 @@
     }
 </style>
 </head>
-
 <!-- HTML code from Bootply.com editor -->
 
 <body style="margin-top:75px">
@@ -110,10 +109,11 @@
         <nav class="collapse navbar-collapse">
             <ul class="nav navbar-nav pull-right">
                 <li class="dropdown">
-                    <a href="#" id="nbAcctDD" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user"></i>Username<i
-                                class="icon-sort-down"></i></a>
+                    <a href="#" id="nbAcctDD" class="dropdown-toggle" data-toggle="dropdown">
+                        {{ app.user.username }}
+                    </a>
                     <ul class="dropdown-menu pull-right">
-                        <li><a href="{{ path('fhbingen_mhb_login_logout') }}">Log Out</a></li>
+                        <li><a href="{{ path('fhbingen_mhb_login_logout') }}">Abmelden</a></li>
                     </ul>
                 </li>
             </ul>
