--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
@@ -105,6 +105,7 @@
         <img src="{{ asset('bundles/fhbingenmhb/images/logo.png') }}" alt="logo"/>
         <span>Modulhandbuch-Verwaltungssystem</span>
     </div>
+    {# wird von Login-Template überschrieben #}
     {% block userLogout %}
         <nav class="collapse navbar-collapse">
             <ul class="nav navbar-nav pull-right">
@@ -113,7 +114,10 @@
                         {{ app.user.username }}
                     </a>
                     <ul class="dropdown-menu pull-right">
-                        <li><a href="{{ path('fhbingen_mhb_login_logout') }}">Abmelden</a></li>
+                        <li>
+                            {# /restricted/logout #}
+                            <a href="{{ path('fhbingen_mhb_login_logout') }}">Abmelden</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
@@ -140,6 +144,7 @@
             <div class="page-header">
                 <h3>{{ pageTitle|default }}</h3>
             </div>
+            {# wird von anderen Templates überschrieben #}
             {% block content %}
             {% endblock %}
         </div>
