Veranstaltung Query Eingefügt

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/veranstaltung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/veranstaltung.html.twig
@@ -21,7 +21,7 @@
         {{ form_row(form.Kuerzel) }}
         {{ form_row(form.Name) }}
         {{ form_row(form.Name_en) }}
-        {{ form_row(form.Haeufigkeit) }}p
+        {{ form_row(form.Haeufigkeit) }}
         {{ form_row(form.Dauer) }}
         {{ form_row(form.Lehrveranstaltungen) }}
         {{ form_row(form.Kontaktzeit_VL) }}
