--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/adminNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/adminNav.html.twig
@@ -7,5 +7,8 @@
         <li role="presentation">
             <a href="{{ path('fhbingen_mhb_verwaltungs_sglshowusers') }}">Benutzerverwaltung</a>
         </li>
+        <li role="presentation">
+            <a href="">Studiengangverwaltung</a>
+        </li>
     {% endif %}
 {% endif %}
