--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/eigeneModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/eigeneModule.html.twig
@@ -10,10 +10,10 @@
             <thead>
             <tr>
                 <th>Modultitel</th>
-                <th>Kürzel</th>
-                <th>Erstelldatum</th>
-                <th>Häufigkeit</th>
-                <th>Lehrende</th>
+                <th style="min-width: 100px; width: 7%">Kürzel</th>
+                <th style="min-width: 130px; width: 12%">Erstelldatum</th>
+                <th style="min-width: 150px; width: 15%">Häufigkeit</th>
+                <th style="min-width: 220px; width: 23%">Lehrende</th>
             </tr>
             </thead>
             <tbody>
@@ -26,7 +26,10 @@
                     <td>{{veranstaltung.kuerzel}}</td>
                     <td>{{veranstaltung.erstellungsdatum|date('d.m.Y')}}</td>
                     <td>{{veranstaltung.haeufigkeit}}</td>
-                    <td>{% for name in mLehrende[count] %}{{name}}</br>{% endfor %}
+                    <td>
+                        {% for name in mLehrende[count] %}
+                            {{name}}</br>
+                        {% endfor %}
                     </td>
                 </tr>
                 {% set count = count +1 %}
@@ -34,15 +37,18 @@
             </tbody>
         </table>
 
+
+
+
         <h3>Module als Lehrender</h3>
         <table class="table table-bordered">
             <thead>
             <tr>
                 <th>Modultitel</th>
-                <th>Kürzel</th>
-                <th>Erstelldatum</th>
-                <th>Häufigkeit</th>
-                <th>Modulverantwortlicher</th>
+                <th style="min-width: 100px; width: 7%">Kürzel</th>
+                <th style="min-width: 130px; width: 12%">Erstelldatum</th>
+                <th style="min-width: 150px; width: 15%">Häufigkeit</th>
+                <th style="min-width: 220px; width: 23%">Modulverantwortlicher</th>
             </tr>
             </thead>
             <tbody>
