--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/eigeneModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/eigeneModule.html.twig
@@ -37,10 +37,7 @@
             </tbody>
         </table>
 
-
-
-
-        <h3>Module als Lehrender</h3>
+        <h3 style="margin-top: 50px">Module als Lehrender</h3>
         <table class="table table-bordered">
             <thead>
             <tr>
