- Alias für Hauptrouten - Links in Navbar eingefügt - Controller gesplittet

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Uebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Uebersicht.html.twig
@@ -1,4 +1,4 @@
-{% extends 'FHBingenMHBBundle:Dozent:Dozent_main.html.twig' %}
+{% extends 'FHBingenMHBBundle::layout.html.twig' %}
 
 {#bei Date wird immer |date('Y-m-d') benötigt um als String zu casten#}
 
