--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/generalNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/generalNav.html.twig
@@ -1,7 +1,7 @@
 <li role="presentation" class="active">
-    <a href="" >Hilfen</a>
+    <a>Hilfen</a>
 </li>
 
 <li role="presentation">
-    <a href="">Benutzerdoku</a>
+    <a href="{{ path('doku') }}">Benutzerdoku</a>
 </li>
