--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/adminNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/adminNav.html.twig
@@ -1,13 +1,16 @@
 {% if app.user %}
     {% if is_granted('ROLE_SGL') %}
         <li role="presentation" class="active">
-            <a href="">Administration</a>
+            <a>Administration</a>
         </li>
-
         <li role="presentation">
+            {# TODO route #}
+            {# {{ path('benutzerverwaltung') }} #}
             <a href="{{ path('fhbingen_mhb_verwaltungs_sglshowusers') }}">Benutzerverwaltung</a>
         </li>
         <li role="presentation">
+            {# TODO route #}
+            {# {{ path('studiengangverwaltung') }} #}
             <a href="">Studiengangverwaltung</a>
         </li>
     {% endif %}
