--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Uebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Uebersicht.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="table-responsive">
-    <h3><a href="/Test123">Modulhandbuch Informatik</a></h3>
+    <h3><a href="#">Modulhandbuch Informatik</a></h3>
     <table class="table table-bordered">
         <thead>
         <tr>
