--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/userCreate.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/userCreate.html.twig
@@ -1,4 +1,4 @@
-{% extends 'FHBingenMHBBundle:SGL:SGL_main.html.twig' %}
+{% extends 'FHBingenMHBBundle::layout.html.twig' %}
 
 {% form_theme form _self %}
 
