--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/userverwaltung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/userverwaltung.html.twig
@@ -1,4 +1,4 @@
-{% extends 'FHBingenMHBBundle:SGL:SGL_main.html.twig' %}
+{% extends 'FHBingenMHBBundle::layout.html.twig' %}
 
 {% block content %}
 
@@ -7,6 +7,7 @@
         <ul>
             {% for person in sgl %}
                 <li>
+                    {# TODO route alias#}
                     <a href="{{'/restricted/sgl/updateUsers/'~person.getDozentenID() }}">{{person}}</a>
                 </li>
             {% endfor %}
@@ -16,6 +17,7 @@
         <ul>
             {% for person in dozent %}
                 <li>
+                    {# TODO route alias#}
                     <a href="{{'/restricted/sgl/updateUsers/'~person.getDozentenID() }}">{{person}}</a>
                 </li>
             {% endfor %}
