--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
@@ -116,7 +116,7 @@
                     <ul class="dropdown-menu pull-right">
                         <li>
                             {# /restricted/logout #}
-                            <a href="{{ path('fhbingen_mhb_login_logout') }}">Abmelden</a>
+                            <a href="{{ path('logout') }}">Abmelden</a>
                         </li>
                     </ul>
                 </li>
