--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/adminNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/adminNav.html.twig
@@ -9,9 +9,7 @@
             <a href="{{ path('fhbingen_mhb_verwaltungs_sglshowusers') }}">Benutzerverwaltung</a>
         </li>
         <li role="presentation">
-            {# TODO route #}
-            {# {{ path('studiengangverwaltung') }} #}
-            <a href="">Studiengangverwaltung</a>
+            <a href="{{ path('studiengangverwaltung') }}">Studiengangverwaltung</a>
         </li>
     {% endif %}
 {% endif %}
