--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/generalNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/generalNav.html.twig
@@ -3,5 +3,5 @@
 </li>
 
 <li role="presentation">
-    <a href="{{ path('doku') }}">Benutzerdoku</a>
+    <a href="#{# {{ path('doku') }} #}">Benutzerdoku</a>
 </li>
