--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
@@ -5,23 +5,23 @@
         </li>
 
         <li role="presentation">
-            <a href="{{ path('alleModule') }}">Modulansicht(alle)</a>
+            <a href="#{# {{ path('alleModule') }} #}">Modulansicht(alle)</a>
         </li>
 
         <li role="presentation">
-            <a href="{{ path('modulcode') }}">Modulcodeanpassung</a>
+            <a href="#{# {{ path('modulcode') }} #}">Modulcodeanpassung</a>
         </li>
 
         <li role="presentation">
-            <a href="{{ path('mhbUebersicht') }}">Modulhandbuchübersicht</a>
+            <a href="#{# {{ path('mhbUebersicht') }} #}">Modulhandbuchübersicht</a>
         </li>
 
         <li role="presentation">
-            <a href="{{ path('mhbErstellung') }}">Modulhandbucherstellung</a>
+            <a href="#{# {{ path('mhbErstellung') }} #}">Modulhandbucherstellung</a>
         </li>
 
         <li role="presentation">
-            <a href="{{ path('moduldeaktivierung') }}">Moduldeaktivierung</a>
+            <a href="#{# {{ path('moduldeaktivierung') }} #}">Moduldeaktivierung</a>
         </li>
     {% endif %}
 {% endif %}
