--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
@@ -13,7 +13,7 @@
         </li>
 
         <li role="presentation">
-            <a href="#{# {{ path('mhbUebersicht') }} #}">Modulhandbuchübersicht</a>
+            <a href="{{ path('mhbUebersicht') }}">Modulhandbuchübersicht</a>
         </li>
 
         <li role="presentation">
