Übericht alle Module

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulbearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulbearbeiten.html.twig
@@ -11,7 +11,7 @@
     {% endblock form_row %}
 
 {% block content %}
-    <h3>Neues Modul anlegen</h3>
+    <h3>Modul Bearbeiten</h3>
     <div class="table-responsive">
         {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
         <table class="table table-bordered">
