--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulbearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulbearbeiten.html.twig
@@ -23,17 +23,17 @@
             {{ form_row(form.Name_en) }}
             {{ form_row(form.Haeufigkeit) }}
             {{ form_row(form.Dauer) }}
-            {{ form_row(form.Lehrveranstaltungen) }}
+            {#{{ form_row(form.Lehrveranstaltungen) }}#}
             {{ form_row(form.Kontaktzeit_VL) }}
             {{ form_row(form.Kontaktzeit_sonstige) }}
             {{ form_row(form.Selbststudium) }}
             {{ form_row(form.Gruppengroesse) }}
             {{ form_row(form.Lernergebnisse) }}
             {{ form_row(form.Inhalte) }}
-            {{ form_row(form.Pruefungsformen) }}
+            {#{{ form_row(form.Pruefungsformen) }}#}
             {{ form_row(form.Sprache) }}
             {{ form_row(form.Literatur) }}
-            {{ form_row(form.Voraussetzung_LP) }}
+            {#{{ form_row(form.Voraussetzung_LP) }}#}
             {{ form_row(form.Voraussetzung_inh) }}
 
         </table>
