--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
@@ -5,11 +5,11 @@
         </li>
 
         <li role="presentation">
-            <a href=" {{ path('alleModule') }} ">Modulansicht(alle)</a>
+            <a href="{{ path('alleModule') }}">Modulansicht(alle)</a>
         </li>
 
         <li role="presentation">
-            <a href="#{# {{ path('modulcode') }} #}">Modulcodeanpassung</a>
+            <a href="{{ path('modulCodeUebersicht') }}">Modulcodeübersicht</a>
         </li>
 
         <li role="presentation">
