--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulCodeErstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulCodeErstellung.html.twig
@@ -13,10 +13,13 @@
 {% block content %}
     <h3>Modul Bearbeiten</h3>
     <div class="table-responsive">
+
         {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
         <table class="table table-bordered">
             {{ form_errors(form) }}
-            {{ form_row(form.module) }}
+            {% if modul != NULL %}
+            {{ modul.getName() }}
+            {% endif %}
             {{ form_row(form.code) }}
         </table>
         {{ form_end(form) }}
