Ümbau Funktionen der Verwaltung inc. Templates und Forms

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/adminNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/adminNav.html.twig
@@ -4,12 +4,10 @@
             <a>Administration</a>
         </li>
         <li role="presentation">
-            {# TODO route #}
-            {# {{ path('benutzerverwaltung') }} #}
-            <a href="{{ path('fhbingen_mhb_verwaltungs_sglshowusers') }}">Benutzerverwaltung</a>
+            <a href="{{ path('benutzerverwaltung') }}">Benutzerverwaltung</a>
         </li>
         <li role="presentation">
-            <a href="#{# {{ path('studiengangverwaltung') }} #}">Studiengangverwaltung</a>
+            <a href="{{ path('studiengangverwaltung') }}">Studiengangverwaltung</a>
         </li>
     {% endif %}
 {% endif %}
