--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
@@ -147,8 +147,8 @@
     </div>
 </div>
 
-<script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
+<script src="http://code.jquery.com/jquery-latest.js"></script>
 
 <script type='text/javascript' src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
