layout.html.twig korrigiert, jQuery wird jetzt richtig importiert

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
@@ -18,85 +18,87 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-</head>
-<style type="text/css">
-    body {
-        padding-top: 50px;
-        overflow: hidden;
-    }
 
-    #wrapper {
-        min-height: 100%;
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        top: 0px;
-        left: 0;
-        display: inline-block;
-    }
+    <script type='text/javascript' src="http://code.jquery.com/jquery-latest.js"></script>
+    <script type='text/javascript' src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-    #main-wrapper {
-        height: 100%;
-        overflow-y: auto;
-        padding: 50px 0 0px 0;
-    }
-
-    #main {
-        position: relative;
-        height: 100%;
-        overflow-y: auto;
-        padding: 0 15px;
-    }
-
-    #sidebar-wrapper {
-        height: 100%;
-        padding: 75px 0 0px 0;
-        position: fixed;
-        border-right: 1px solid gray;
-    }
-
-    #sidebar {
-        position: relative;
-        height: 100%;
-        overflow-y: auto;
-    }
-
-    #sidebar .list-group-item {
-        border-radius: 0;
-        border-left: 0;
-        border-right: 0;
-        border-top: 0;
-    }
-
-    @media (max-width: 992px) {
+    <style type="text/css">
         body {
-            padding-top: 0px;
+            padding-top: 50px;
+            overflow: hidden;
         }
-    }
 
-    @media (min-width: 992px) {
+        #wrapper {
+            min-height: 100%;
+            height: 100%;
+            width: 100%;
+            position: absolute;
+            top: 0px;
+            left: 0;
+            display: inline-block;
+        }
+
         #main-wrapper {
-            float: right;
+            height: 100%;
+            overflow-y: auto;
+            padding: 50px 0 0px 0;
         }
-    }
 
-    @media (max-width: 992px) {
-        #main-wrapper {
-            padding-top: 0px;
+        #main {
+            position: relative;
+            height: 100%;
+            overflow-y: auto;
+            padding: 0 15px;
         }
-    }
 
-    @media (max-width: 992px) {
         #sidebar-wrapper {
-            position: static;
-            height: auto;
-            max-height: 300px;
-            border-right: 0;
+            height: 100%;
+            padding: 75px 0 0px 0;
+            position: fixed;
+            border-right: 1px solid gray;
         }
-    }
-</style>
+
+        #sidebar {
+            position: relative;
+            height: 100%;
+            overflow-y: auto;
+        }
+
+        #sidebar .list-group-item {
+            border-radius: 0;
+            border-left: 0;
+            border-right: 0;
+            border-top: 0;
+        }
+
+        @media (max-width: 992px) {
+            body {
+                padding-top: 0px;
+            }
+        }
+
+        @media (min-width: 992px) {
+            #main-wrapper {
+                float: right;
+            }
+        }
+
+        @media (max-width: 992px) {
+            #main-wrapper {
+                padding-top: 0px;
+            }
+        }
+
+        @media (max-width: 992px) {
+            #sidebar-wrapper {
+                position: static;
+                height: auto;
+                max-height: 300px;
+                border-right: 0;
+            }
+        }
+    </style>
 </head>
-<!-- HTML code from Bootply.com editor -->
 
 <body style="margin-top:75px">
 
@@ -146,11 +148,6 @@
         </div>
     </div>
 </div>
-
-
-<script src="http://code.jquery.com/jquery-latest.js"></script>
-
-<script type='text/javascript' src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
 </body>
 </html>
