--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/studiengangAnzeigen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/studiengangAnzeigen.html.twig
@@ -74,6 +74,7 @@
             {{ form_row(form.titel) }}
             {{ form_row(form.kuerzel) }}
             {{ form_row(form.beschreibung) }}
+            {# TODO: entweder nur SGLs anzeigen oder Dozent beim Abschicken automatisch zu SGL promoten #}
             {{ form_row(form.sgl) }}
         </table>
 
