--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Liste.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Liste.html.twig
@@ -23,7 +23,7 @@
                         <td>{{ entity['Kuerzel'] }}</td>
                         <td>{{ entity['Code'] }}</td>
                         <td>{{ entity['Versionsnummer_Modul'] }}</td>
-                        <td>{{ entity['Nachname'] }}</td>
+                        <td>{{ entity['Titel']~' '~entity['Nachname'] }}</td>
 
             </tbody>
                 </tr>
