--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Uebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Uebersicht.html.twig
@@ -21,7 +21,7 @@
 
                         <td><a href="{{'/restricted/sgl/mhbModulListe/'~entity.getMHBID() }}">{{ entity.Beschreibung }}</td>
                         <td>{{ entity.getGueltigAb() }}</td>
-                        <td>{{ entity.getMHBVersionsnummer() }}</td>
+                        <td>{{ entity.getVersionsnummer() }}</td>
                         <td>{{ entity.getErstellungsdatum()|date('d.m.Y') }}</td>
 
                 </tr>
