--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulCodeUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulCodeUebersicht.html.twig
@@ -16,8 +16,8 @@
             <tbody>
             {% for dummy in dummyAngebote %}
                 <tr>
-                    <td><a href="{{'/restricted/sgl/modulCodeErstellung/'~dummy.getModule().getModulID()}}">{{dummy.getModule()}}</a></td>
-                   <td>{{dummy.getModule().getErstellungsdatum()|date('d.m.Y')}}</td>
+                    <td><a href="{{'/restricted/sgl/modulCodeErstellung/'~dummy.getVeranstaltung().getModulID()}}">{{dummy.getVeranstaltung()}}</a></td>
+                   <td>{{dummy.getVeranstaltung().getErstellungsdatum()|date('d.m.Y')}}</td>
                 </tr>
             {% endfor %}
             </tbody>
@@ -34,8 +34,8 @@
             <tbody>
             {% for normal in angebote %}
                 <tr>
-                    <td><a href="{{'/restricted/sgl/modulCodeErstellung/'~normal.getModule().getModulID()}}">{{ normal.getModule() }}</a></td>
-                   <td>{{ normal.getModule().getErstellungsdatum()|date('d.m.Y') }}</td>
+                    <td><a href="{{'/restricted/sgl/modulCodeErstellung/'~normal.getVeranstaltung().getModulID()}}">{{ normal.getVeranstaltung() }}</a></td>
+                   <td>{{ normal.getVeranstaltung().getErstellungsdatum()|date('d.m.Y') }}</td>
                 </tr>
             {% endfor %}
             </tbody>
