löschen fix (vollständig)

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/studiengangAnzeigen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/studiengangAnzeigen.html.twig
@@ -54,13 +54,15 @@
         function removeLastVertiefung(){
             $('#vertiefung-fields-list li:last').remove();
             //decrement count variable if you want to overwrite old indizes when adding new elements
-            vertiefungCount--;
+            //vertiefungCount--;
+            //wollen wir nicht, sonst wird beim löschen + hinzufügen nur das alte umbenannt!
 
         };
         function removeLastFachgebiet(){
             $('#fachgebiet-fields-list li:last').remove();
             //decrement count variable if you want to overwrite old indizes when adding new elements
-            fachgebietCount--;
+            //fachgebietCount--;
+            //wollen wir nicht, sonst wird beim löschen + hinzufügen nur das alte umbenannt!
         };
     </script>
 
