--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/studiengangAnzeigen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/studiengangAnzeigen.html.twig
@@ -51,6 +51,7 @@
                 newLi.appendTo(fachList);
             });
         });
+        //TODO löschen hinter jedem Eintrag anzeigen
         function removeLastVertiefung(){
             $('#vertiefung-fields-list li:last').remove();
             //decrement count variable if you want to overwrite old indizes when adding new elements
