MHB Erstellung, Angebots Übersicht

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
@@ -17,7 +17,7 @@
         </li>
 
         <li role="presentation">
-            <a href="#{# {{ path('mhbErstellung') }} #}">Modulhandbucherstellung</a>
+            <a href=" {{ path('mhbErstellung') }} ">Modulhandbucherstellung</a>
         </li>
 
         <li role="presentation">
