--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/veranstaltung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/veranstaltung.html.twig
@@ -17,25 +17,25 @@
 
     {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
     <table>
-        {{ form_row(form.Status) }}
-        {{ form_row(form.Kuerzel) }}
-        {{ form_row(form.Name) }}
-        {{ form_row(form.Name_en) }}
-        {{ form_row(form.Haeufigkeit) }}
-        {{ form_row(form.Dauer) }}
-        {{ form_row(form.Lehrveranstaltungen) }}
-        {{ form_row(form.Kontaktzeit_VL) }}
-        {{ form_row(form.Kontaktzeit_sonstige) }}
-        {{ form_row(form.Selbststudium) }}
-        {{ form_row(form.Gruppengroesse) }}
-        {{ form_row(form.Lernergebnisse) }}
-        {{ form_row(form.Inhalte) }}
-        {{ form_row(form.Pruefungsformen) }}
-        {{ form_row(form.Sprache) }}
-        {{ form_row(form.Literatur) }}
-        {{ form_row(form.Leistungspunkte) }}
-        {{ form_row(form.Voraussetzung_LP) }}
-        {{ form_row(form.Voraussetzung_inh) }}
+        {{ form_row(form.status) }}
+        {{ form_row(form.kuerzel) }}
+        {{ form_row(form.name) }}
+        {{ form_row(form.nameEN) }}
+        {{ form_row(form.haeufigkeit) }}
+        {{ form_row(form.dauer) }}
+        {{ form_row(form.lehrveranstaltungen) }}
+        {{ form_row(form.kontaktzeitVL) }}
+        {{ form_row(form.kontaktzeitSonstige) }}
+        {{ form_row(form.selbststudium) }}
+        {{ form_row(form.gruppengroesse) }}
+        {{ form_row(form.lernergebnisse) }}
+        {{ form_row(form.inhalte) }}
+        {{ form_row(form.pruefungsformen) }}
+        {{ form_row(form.sprache) }}
+        {{ form_row(form.literatur) }}
+        {{ form_row(form.leistungspunkte) }}
+        {{ form_row(form.voraussetzungLP) }}
+        {{ form_row(form.voraussetzungInh) }}
         {{ form_row(form.beauftragter) }}
     </table>
     {{ form_end(form) }}
