Rückleitungen bei Nutzerverwaltung erstellt und keleine bugfixes

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/userverwaltung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/userverwaltung.html.twig
@@ -23,5 +23,11 @@
             {% endfor %}
         </ul>
     </div>
+    <div>
+        <h3>Neuen User anlegen</h3>
+        <ul>
+            <li><a href="{{'/restricted/sgl/createUsers'}}">User anlegen</a></li>
+        </ul>
+    </div>
 
 {% endblock %}
